12-15-08: #1042, delete tracker_version field from tracking messages, it is obsolete
12-15-08: #1041, identify a tracking message format by 3 fields: message_type, message_version, sim_type
12-15-08: #862, add tracking message fields to match database design spec
12-15-08: #862, change tracking message names and field to use "_" instead of "-"
12-15-08: #1042, tracker_version should be sent with every message
12-15-08: #1041, each message_type should have a separate message_version value
12-15-08: #1041, message_version should be sent with every message
12-15-08: #1040, reorganize and document constants for state-changed and action-performed messages
12-15-08: #1032, validate JAR files downloaded by SimUpdater
12-10-08: #1035, add preferred fonts for Chinese-Taiwan (tc), identical to Chinese (zh)
12-10-08: #1030, JARLauncher makes bad assumptions about properties file
12-10-08: #993 (reopened), disabling tracking or updates causes tabs to be hidden in Preferences dialog
12-10-08: #1026, create $HOME/.phet if needed when incrementing session count
12-10-08: #1027, create abstractions for $HOME/.phet and files in that dir
12-03-08: #920, add "mac-osx-quit" tracking message
12-03-08: #920, implement quit handler for Mac OS X
12-03-08: #920, add Apple contrib code (OSXAdapter)
12-03-08: #1001, update-now-pressed is sent whenever update dialog is opened
12-02-08: cleanup and generalize ILogger hierarchy
12-01-08: #945, generalized error dialogs
11-24-08: #926, integrated threaded downloading & progress bar into SimUpdater
11-21-08: #926, add DownloadProgressDialog
11-21-08: add MaxCharsLabel, a specialized JLabel that displays a max number of chars
11-21-08: add SwingUtils.setPreferredWidth, setPreferredHeight
11-21-08: add SwingUtils.centerDialog
11-21-08: #926, add DownloadThread util class
11-14-08: add StringUtil.stackTraceToString
11-14-08: move contents of package phetcommon.util.testing into phetcommon.tests.util